@startuml Channels - Code Components

hide empty members

enum ChannelReportGrouping <<Тип группировки отчета>> {
    NONE
    ROLE
    CLIENTS
    PROJECT_TYPE
    TOOLS
}

class ChannelReportQueryData <<DTO с параметрами отчета>> {
    + ChannelReportGrouping $grouping
    + Collection<TableReportColumnData> $columns
    + Carbon $dateFrom
    + Carbon $dateTo
    + bool $showInactive
    + bool $includeVat
}

!include docs/diagrams/shared/table_report.wsd

class ChannelReportService <<Сервис с логикой отчета>> {
    + getReportData(ChannelReportQueryData $queryData): TableReportData
}

class ChannelReport <<Fullpage Компонент Livewire для страницы "Каналы">> extends Livewire.Component {
    + ChannelReportQueryData $queryData
    + TableReportData $reportData
    - ChannelReportService $reportService

    + boot(): void
    + mount(): void
    + render(): void
    + getReportData(): void
}
note as ChannelReportNote
    Рендер таблицы выполняется по следующему алгоритму:
    {{
        !include channel_report_table_render.wsd
    }}
    Предполагается, что при отсутствии группировки, то в reportData будет только одна группа без groupLabel
end note

ChannelReportNote -> ChannelReport

ChannelReport --> ChannelReportQueryData
ChannelReport --> ChannelReportService
ChannelReportQueryData --> ChannelReportGrouping
ChannelReportQueryData --> TableReportColumnData
ChannelReportService --> ChannelReportQueryData
ChannelReportService --> TableReportData

@enduml